Source/WebKit2/Platform/classifier/cocoa/ResourceLoadStatisticsClassifierCocoa.cpp
@@ -26,9 +26,11 @@
 #include "config.h"
 #include "ResourceLoadStatisticsClassifierCocoa.h"
 
+#if HAVE(CORE_PREDICTION)
+
+#include "CorePredictionSPI.h"
 #include "Logging.h"
 #include <wtf/NeverDestroyed.h>
-#include "CorePredictionSoftLink.h"
 
 namespace WebKit {
 
@@ -70,6 +72,20 @@ String ResourceLoadStatisticsClassifierCocoa::storagePath()
     return String(resourceUrlString.get());
 }
 
+static inline bool isNullFunctionPointer(void* functionPointer)
+{
+    void* result;
+    // The C compiler may take advantage of the fact that by definition, function pointers cannot be
+    // null. When weak-linking a library, function pointers can be null. We use non-C code to
+    // prevent the C compiler from using the definition to optimize out the null check.
+    asm(
+        "mov %1, %0"
+        : "=r" (result)
+        : "r" (functionPointer)
+    );
+    return !result;
+}
+
 bool ResourceLoadStatisticsClassifierCocoa::canUseCorePrediction()
 {
     if (m_haveLoadedModel)
@@ -78,7 +94,7 @@ bool ResourceLoadStatisticsClassifierCocoa::canUseCorePrediction()
     if (!m_useCorePrediction)
         return false;
 
-    if (!CorePredictionLibrary()) {
+    if (isNullFunctionPointer(reinterpret_cast<void*>(svm_load_model))) {
         m_useCorePrediction = false;
         return false;
     }
@@ -110,3 +126,5 @@ const struct svm_model* ResourceLoadStatisticsClassifierCocoa::singletonPredicti
     return nullptr;
 }
 }
+
+#endif
